# code

./: .gitignore  .gitmodules  BUGS  CMakeLists.txt  CodingStyle  FAQ  HISTORY  INSTALL  Makefile  Makefile.reference  README  README.compile  README.git  TODO  VERSION  fortran_version.sh  getm_build.bat  getm_configure.bat  getm_configure.sh  release.sh
compilers/: compiler.DECFOR  compiler.FTN  compiler.FUJITSU  compiler.GFORTRAN  compiler.IFC  compiler.IFORT  compiler.IFORT11  compiler.NAG  compiler.PGF90  compiler.XLF
doc/: .gitignore  2dIntro.tex  3dIntro.tex  Makefile  Numerics.tex  a4.tex  definitions.tex  domainIntro.tex  futilsIntro.tex  getm.bib  getmIntro.tex  (+9 more)
src/: CMakeLists.txt  ChangeLog  Makefile  README  README.halo  Rules.make  TODO
src/2d/: CMakeLists.txt  Makefile  adv_arakawa_j7_2dh.F90  adv_fct_2dh.F90  adv_interfacial_reconstruction.F90  adv_split_u.F90  adv_split_v.F90  adv_tvd_limiter.F90  adv_u_split.F90  adv_upstream.F90  adv_upstream_2dh.F90  adv_v_split.F90  advection.F90  bdy_2d.F90  bottom_friction.F90  calc_uvex.F90  cfl_check.F90  coriolis.F90  deformation_rates.F90  deformation_rates.h  depth_update.F90  divergence.F90  dynamic_allocations.h  dynamic_allocations_2d.h  dynamic_declarations_2d.h  have_bdy.F90  init_2d_bdy.F90  m2d.F90  m2d_general.F90  momentum.F90  physical_dissipation.F90  residual.F90  sealevel.F90  static_2d.h  test_speed_adv_upstream_2dh.F90  u_split_adv.F90  update_2d_bdy.F90  upstream_2dh_adv.F90  upstream_adv.F90  uv_advect.F90  (+7 more)
src/3d/: CMakeLists.txt  Makefile  adaptive_coordinates.F90  adv_fct_2dh.F90  adv_fct_2dh_3d.F90  adv_split_w.F90  adv_u_split.F90  adv_u_split_3d.F90  adv_upstream.F90  adv_upstream_2dh.F90  adv_upstream_2dh_3d.F90  adv_upstream_3d.F90  adv_v_split.F90  adv_v_split_3d.F90  adv_w_split.F90  adv_w_split_3d.F90  adv_w_split_it.F90  adv_w_split_it_3d.F90  advection_3d.F90  bdy_3d.F90  bottom_friction_3d.F90  bottomstress_3d.F90  buoyancy_frequency.F90  check_h.F90  coordinates.F90  coordinates.F90.devel  deformation_rates_3d.F90  divergence.F90  dynamic_allocations.h  dynamic_allocations_3d.h  dynamic_declarations.h  dynamic_declarations_3d.h  eqstate.F90  fct_2dh_adv.F90  general_coordinates.F90  getm_bio.F90  getm_fabm.F90  gotm.F90  hcc_check.F90  hybrid_coordinates.F90  (+53 more)
src/cmake/Modules/: FindFABM.cmake  FindGOTM.cmake  FindMPI.cmake  FindNetCDF.cmake  GetGitInfo.cmake
src/coupling/: Makefile  Rules.make_ESMF  Rules.make_OASIS  getm_esmf.F90  getm_oasis.F90
src/cutils/: Makefile  caldat.c  julday.c  kurt.c
src/domain/: CMakeLists.txt  Makefile  bdy_spec.F90  domain.F90  dynamic_allocations_domain.h  dynamic_allocations_domain_1.h  dynamic_allocations_domain_2.h  dynamic_declarations.h  dynamic_declarations_domain.h  have_bdy.F90  mirror_bdy_2d.F90  mirror_bdy_3d.F90  part_domain.F90  print_bdy.F90  static.h  static_domain.h  topo_interface.F90  uv_depths.F90
src/futils/: CMakeLists.txt  Makefile  c2x.F90  check_3d_fields.F90  cnv_2d.F90  cnv_3d.F90  col_interpol.F90  eta_mask.F90  exceptions.F90  filter_1d.F90  getm_error.F90  getm_timers.F90  getm_version.F90  getm_version.F90.in  grid_interpol.F90  halo_mpi.F90  halo_zones.F90  kbk_interpol.F90  parallel.F90  parameters.F90  pos.F90  read_par_setup.F90  strip_string.F90  time.F90  to_2d_u.F90  to_2d_v.F90  to_2d_vel.F90  to_3d_uu.F90  to_3d_vel.F90  to_3d_vv.F90  to_fluxu.F90  to_fluxv.F90  to_fluxw.F90  to_u.F90  to_v.F90  to_velx.F90  to_vely.F90  to_w.F90  tow.F90  tridiagonal.F90  (+1 more)
src/getm/: CMakeLists.txt  Makefile  cleanup.F90  compilation_options.F90  initialise.F90  integration.F90  main.F90  print_version.F90  register_all_variables.F90  set_sea_surface_state.F90
src/halos/: Makefile  halo_mpi.F90  halo_test.F90  halo_zones.F90  p4file  parallel.F90
src/ice/: Makefile  getm_ice.F90
src/input/: CMakeLists.txt  Makefile  check_grid.F90  get_2d_bdy.F90  get_2d_field.F90  get_3d_bdy.F90  get_3d_field.F90  get_field.F90  get_grid.F90  get_ice_data.F90  get_meteo_data.F90  get_river_data.F90  get_waves_data.F90  init_2d_bdy.F90  init_3d_bdy.F90  init_ice_input.F90  init_meteo_input.F90  init_river_input.F90  init_waves_input.F90  input.F90  inquire_file.F90  open_topo_file.F90  read_profile.F90  read_topo_file.F90
src/les/: Makefile  dynamic_allocations_les.h  dynamic_declarations_les.h  les.F90  les_smagorinsky.F90  les_smagorinsky_sym.F90  static_les.h  variables_les.F90
src/meteo/: CMakeLists.txt  Makefile  albedo_water.F90  exchange_coefficients.F90  fluxes.F90  meteo.F90  short_wave_radiation.F90
src/misc/: Remenber  eiloop  ejloop  loops2d
src/ncdf/: CMakeLists.txt  Makefile  aa  create_restart_ncdf.F90  get_2d_field_ncdf.F90  get_2d_field_ncdf_by_id.F90  get_field_ncdf.F90  grid_ncdf.F90  init_2d_ncdf.F90  init_3d_ncdf.F90  init_grid_ncdf.F90  init_mean_ncdf.F90  ncdf_2d.F90  ncdf_2d_bdy.F90  ncdf_3d.F90  ncdf_3d_bdy.F90  ncdf_3d_bdy.F90.devel  ncdf_3d_bio_bdy.F90  ncdf_close.F90  ncdf_common.F90  ncdf_get_field.F90  ncdf_ice.F90  ncdf_in.F90  ncdf_mean.F90  ncdf_meteo.F90  ncdf_restart.F90  ncdf_rivers.F90  ncdf_topo.F90  ncdf_waves.F90  open_restart_ncdf.F90  read_field_ncdf.F90  read_restart_ncdf.F90  save_2d_ncdf.F90  save_3d_ncdf.F90  save_grid_ncdf.F90  save_mean_ncdf.F90  set_attributes.F90  write_restart_ncdf.F90
src/output/: CMakeLists.txt  Makefile  ascii_out.F90  calc_mean_fields.F90  diagnose.F90  diagnostic_variables.F90  ncdf_out.F90  nesting.F90  nomads_ascii_out.F90  output.F90  output_processing.F90  parser.F90  processed_variables.F90  test_parser.F90  test_varinfo.F90  variable_info.F90
src/pool/: Makefile  deformation_rates.F90  flux_center2interface.F90  pool.F90
src/turb/: Makefile  comturb.h  dissipation.F90  eddyviscosity.F90  pran_kol.F90  production.F90  tke_calc.F90  turb.F90
src/waves/: Makefile  bottom_friction_waves.F90  radiation_stress.F90  radiation_stress_3d.F90  rs_force.F90  stokes_drift.F90  stokes_drift_3d.F90  variables_waves.F90  vortex_force.F90  vortex_force_3d.F90  waves.F90
tests/: CMakeLists.txt  test_rotation.F90  test_speed_adv_upstream_2dh.F90
(+74 files in other folders)
